<resources>
    <string name="app_name">RxJava</string>
    <string name="action_settings_sample1">Rxjava1</string>
    <string name="action_settings_sample2">Rxjava2</string>
    <string name="action_settings_sample3">lifecycle+rxjava</string>
    <string name="action_settings_sample4">aidl</string>
    <string name="action_settings_sample5">sample5</string>

    <string name="blue_tooth_on">BlueTooth On</string>
    <string name="blue_tooth_off">BlueTooth Off</string>

    <!--    qr code-->
    <string name="base_ok">确定</string>
    <string name="error_dialog_msg_camera_error">相机错误</string>
</resources>
